build-logs/configure-release-20251123-155110.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/prep.py", line 161, in Configure
    if not cm.generate(options.generator):
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/context_manager.py", line 93, in generate
    self.parseBuildScripts()
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context_manager.py", line 50, in parseBuildScripts
    self.execContext(cx)
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context_manager.py", line 149, in execContext
    exec(code, scriptGlobals)
  File "/var/repos/rcbot2/AMBuildScript", line 20, in <module>
    SdkHelpers = builder.Eval(sdkhelpers_path, {
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context.py", line 115, in Eval
    return self.cm.evalScript(self, path, vars or {})
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context_manager.py", line 60, in evalScript
    obj = self.importScriptImpl(context, path, vars or {})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context_manager.py", line 81, in importScriptImpl
    scriptGlobals = self.execContext(cx)
                    ^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/v2_2/context_manager.py", line 141, in execContext
    code = self.compileScript(context.script_)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/ambuild2/frontend/context_manager.py", line 60, in compileScript
    return compile(chars, path, 'exec')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/repos/rcbot2/hl2sdk-manifests/SdkHelpers.ambuild", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
Configure failed: illegal target for annotation (SdkHelpers.ambuild, line 1)
